@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.36-1lsb3.2.i486.rpm 2904765 BLAKE2B de73d4899f8ff77ae2f663412c40117efc489f244d89d80f9b8a16c72eb34baa7c4a72427e029e434e3f1b99a19fb70d1278772ad6d6bbf60604d908498d0228 SHA512 426939c70a79f18440031f8705b9c06baade54358ceaf57553177c3d1877b9d9149881566a05358ef85f427d94c0ed1c60a3cee972564d81285c26a64afa345e
-DIST epson-inkjet-printer-escpr2-1.1.36-1lsb3.2.x86_64.rpm 2904324 BLAKE2B 87ca00f387dd9007fc3f0bf8eabe9386e3a57033e5f94e7e46b24cfe068ec769c90728402fd899897d9e0a92d0d489f6eee97155f545e16e32c0d04ab4738acd SHA512 f65b12140f6144a75c656410f839a16902cea18c2cd2132665081378d7ef72cf8d97a5d25b7894b9e475f80b06e9579ec6119e3acca5730e99bd2acb1f93500a
 DIST epson-inkjet-printer-escpr2-1.1.37-1lsb3.2.i486.rpm 2984346 BLAKE2B 4ee7dea4323579a30969b1d5b76e0ff3b89b48e58337889394b74f781b1e3fcd030361d7102692ed0e89932ffcdcede7ef6f4ac8857735336b7ac744dedd0aae SHA512 95a844fa59d107b3c092221931d0502740660e39bec503d01a61da8697decaa5c61b55945c7a3bf9981d299eac6c0725592f99960a26158dfdf5be238878143b
 DIST epson-inkjet-printer-escpr2-1.1.37-1lsb3.2.x86_64.rpm 2983769 BLAKE2B 2a6d2adf699e277049c71737bb75d5b0e5d2c6c5d82b062c1bcbe2c11db382666789275ce340f242b986d08df7a4e5ced082467561925e527752659539afab54 SHA512 94cff74c5b1af80a9458e44c41b35d772d9088042a7728533d992726e06e26494bb316c14f098562d6c70e87f370c5202d6f4a1c4a0bfe79ecede08e2c5084eb
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.36.ebuild 1670 BLAKE2B ffea6ea759137bab9fa47eb497c95f92aea52c5d01010bdf47ea1b77e10ebb43119716b8d58c1570ff15b03012fcdc11143b055a9c162c7e8b16f0f6cfde49c4 SHA512 f78134bac1027e28c70d2a32f0cae7bb6b002d93b293408748ee68dce93c6cbd61cf250a43d996ce64fd29e53b82c3b223cc9a72d2406d49ee6737715fdad6f6
+DIST epson-inkjet-printer-escpr2-1.1.38-1lsb3.2.i486.rpm 3020541 BLAKE2B 460c3f2b8a16422e88df2cc41df5fdd9ff32335034935fc15e6b372d971a18994c01906c92b6adcff5acd6972550744c2fd0327b4a196b9a210495f570ab309d SHA512 49ac4778e815f335725bd007603efa8c379bb090176e24c51d3851f217560aeb6a12eac8b917e9fc0b52d8d31e5d2a50fdcc43be758783cd4fd4d390b58dbe28
+DIST epson-inkjet-printer-escpr2-1.1.38-1lsb3.2.x86_64.rpm 3020113 BLAKE2B af6e9fc7dd01353cc7620510c92d3c18a62215e34dcdfd6f6f82030994d6b5aeba3b240d1fd0f07bec0e9c64445cd7a5f5a088564209b3b410b2d56b6ea27d45 SHA512 4af8bd5eceab68fe3869962b52b26def273c4b60c0157598d45404fe5a0a009439341fedaccad6b072c084228cbf146f66e0c5c03decb00e780ac13dcb94e63c
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.37.ebuild 1670 BLAKE2B a19ac459edba834213a04e3c6ece0c2fe884a3288fbdc2684330bd167bbb2335183c05c7193118d75759ab52d74053f8f66a7df5483d77c9a01e85d562f62180 SHA512 4464d72ce29a95b94092404d1814d763196845aa560bec7c7d205f55aac63fb59af0871dc6857da58672612409b9c3951b118837ecb2b6f9824ce62dc2bcee2e
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.38.ebuild 1670 BLAKE2B 6c1d8a0cefff69e0401ad43bc131d508c699066445b2fe21b39b2629afc5b0533beefaf490605d2873d7d0e7b22cd82a7d484ec1fffa4ea39800db1c44ea945f SHA512 aed6b35327734af829ab317a7111c34bd75d354a17939b26f7ee632e0f752b3f6781cdc3ed4690bcfe8739b90e5435e7b6ac7b7d1771ec41c25a84ffff105b58
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
